; ModuleID = '/home/carl/AnghaBench/kphp-kdb/search/extr_search-value-buffer.c_value_buffer_output_item_id_text.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/search/extr_search-value-buffer.c_value_buffer_output_item_id_text.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.value_buffer = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.value_buffer*, i64)* @value_buffer_output_item_id_text to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @value_buffer_output_item_id_text(%struct.value_buffer* %0, i64 %1) #0 {
  %3 = alloca %struct.value_buffer*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  store %struct.value_buffer* %0, %struct.value_buffer** %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = load i64, i64* %4, align 8
  %7 = call i32 @SHORT_ID(i64 %6)
  store i32 %7, i32* %5, align 4
  %8 = load i32, i32* %5, align 4
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %10, label %20

10:                                               ; preds = %2
  %11 = load %struct.value_buffer*, %struct.value_buffer** %3, align 8
  %12 = load i64, i64* %4, align 8
  %13 = trunc i64 %12 to i32
  %14 = call i32 @value_buffer_output_int_text(%struct.value_buffer* %11, i32 %13)
  %15 = load %struct.value_buffer*, %struct.value_buffer** %3, align 8
  %16 = call i32 @value_buffer_output_char_text(%struct.value_buffer* %15, i8 signext 95)
  %17 = load %struct.value_buffer*, %struct.value_buffer** %3, align 8
  %18 = load i32, i32* %5, align 4
  %19 = call i32 @value_buffer_output_int_text(%struct.value_buffer* %17, i32 %18)
  br label %25

20:                                               ; preds = %2
  %21 = load %struct.value_buffer*, %struct.value_buffer** %3, align 8
  %22 = load i64, i64* %4, align 8
  %23 = trunc i64 %22 to i32
  %24 = call i32 @value_buffer_output_int_text(%struct.value_buffer* %21, i32 %23)
  br label %25

25:                                               ; preds = %20, %10
  ret void
}

declare dso_local i32 @SHORT_ID(i64) #1

declare dso_local i32 @value_buffer_output_int_text(%struct.value_buffer*, i32) #1

declare dso_local i32 @value_buffer_output_char_text(%struct.value_buffer*, i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
